--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^15.0.2",
     "react-addons-pure-render-mixin": "^15.0.2",
     "react-dom": "^15.0.2",
+    "react-motion": "^0.4.4",
     "react-redux": "^2.1.2",
     "react-router": "^2.4.1",
     "redux": "^3.0.0",
